Fixed error text align

--- a/src/components/common/Input/Input.module.css
+++ b/src/components/common/Input/Input.module.css
@@ -198,6 +198,10 @@
 /**
  ** When error
  */
+.error {
+    text-align: left;
+}
+
 :not(:disabled).error > .field {
     border-color: var(--semantic-error);
 }
